add sha1